# coinbase-dtc-core

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  Dockerfile  README.md  debug_header.cpp  docker-compose.yml  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
debug/: debug_header.cpp  debug_sizes.cpp
dev-info/: ADDING_NEW_EXCHANGE.md  TODO.md  compile-helpers.md  namespaces.md
include/coinbase_dtc_core/auth/: jwt_auth.hpp
include/coinbase_dtc_core/core/auth/: cdp_credentials.hpp  credentials_manager.hpp  jwt_auth.hpp
include/coinbase_dtc_core/core/dtc/: protocol.hpp
include/coinbase_dtc_core/core/http/: http_client.hpp
include/coinbase_dtc_core/core/server/: server.hpp
include/coinbase_dtc_core/core/settings/: core_settings.h
include/coinbase_dtc_core/core/test/: api_mock.hpp  test_config.hpp
include/coinbase_dtc_core/core/util/: log.hpp
include/coinbase_dtc_core/dtc/: protocol.hpp
include/coinbase_dtc_core/exchanges/base/: exchange_feed.hpp
include/coinbase_dtc_core/exchanges/binance/: binance_feed.hpp
include/coinbase_dtc_core/exchanges/coinbase/: coinbase_feed.hpp  endpoint.hpp  ssl_websocket_client.hpp  websocket_client.hpp
include/coinbase_dtc_core/exchanges/coinbase/settings/: coinbase_settings.h
include/coinbase_dtc_core/exchanges/factory/: exchange_factory.hpp
include/coinbase_dtc_core/feed/: exchange_feed.hpp
include/coinbase_dtc_core/feed/binance/: binance_feed.hpp
include/coinbase_dtc_core/feed/coinbase/: coinbase_feed.hpp  websocket_client.hpp
include/coinbase_dtc_core/server/: server.hpp
include/dtc_test_client/: test_client.hpp
scripts/: validate-docker.ps1
secrets/coinbase/: coinbase.h
secrets/dtc/: dtc_server.h  dtc_server.h.template
src/auth/: jwt_auth.cpp
src/coinbase_websocket/: websocket_client.cpp
src/core/auth/: credentials.cpp  jwt_auth.cpp
src/core/dtc/: protocol.cpp  protocol_backup.cpp
src/core/server/: main.cpp  server.cpp  simple_tcp_test.cpp
src/core/test/: api_mock.cpp
src/core/util/: log.cpp
src/dtc_protocol/: protocol.cpp
src/dtc_test_client/: dtc_gui_client.cpp  dtc_gui_client.hpp  main.cpp  main_gui.cpp  test_client.cpp
src/exchanges/base/: exchange_feed.cpp
src/exchanges/binance/: binance_feed.cpp
src/exchanges/coinbase/: coinbase_feed.cpp  ssl_websocket_client.cpp  websocket_client.cpp  websocket_client_old.cpp
src/exchanges/factory/: exchange_factory.cpp
src/feed/: exchange_feed.cpp
src/feed/coinbase/: coinbase_feed.cpp
src/server/: main.cpp  server.cpp
tests/: test_dtc_client.cpp  test_dtc_protocol.cpp  test_jwt_auth.cpp  test_ssl_websocket.cpp  test_websocket_basic.cpp  test_websocket_connection.cpp
tests/core/: test_basic.cpp
tests/core/dtc/: test_dtc_protocol.cpp
tests/core/server/: test_server.cpp
tests/exchanges/: test_ssl_websocket_coinbase.cpp
tests/exchanges/coinbase/: test_advanced_trade_api.cpp  test_coinbase_feed.cpp  test_jwt_auth.cpp  test_jwt_debug.cpp  test_permissions.cpp
tests/integration/: extract_permissions_token.cpp  extract_token.cpp  test_dtc_integration.cpp  test_environment.cpp  test_multi_exchange.cpp
